Se rediseñan y ordenan los button e input del item html, y se corrigen algunos css

--- a/public/css/pages/item.css
+++ b/public/css/pages/item.css
@@ -9,69 +9,84 @@
 }
 
 .prod-rel {
-  font-size: 46px;
+  font-size: var(--font-display);
   margin: 20px;
   padding: 20px;
 }
 
-#tituloStar {
+.tituloStar {
   color: var(--dark-bg-solid);
   font-family: var(--base-font);
   font-size: var(--font-small);
   font-style: normal;
   font-weight: 500;
   line-height: normal;
-  margin-bottom: 11px;
+  margin-bottom: var(--spacing-12);
 }
 
-#babyYoda {
+.babyYoda {
   color: var(--dark-solid);
-font-family: var(--base-font);
-font-size: var(--font-jumbo);
-font-style: normal;
-font-weight: 700;
-line-height: normal;
-margin-bottom: 16px;
+  font-family: var(--base-font);
+  font-size: var(--font-jumbo);
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  margin-bottom: var(--spacing-16);
 }
-#descrip__price {
+
+.descrip__price {
   color: var(--dark-bg-solid);
-font-family: var(--base-font);
-font-size: var(--font-jumbo);
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-margin-bottom: 16px;
+  font-family: var(--base-font);
+  font-size: var(--font-jumbo);
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: var(--spacing-16);
 }
-#descripYoda {
+
+.descripYoda {
   color: var(--dark-bg-solid);
-font-family: var(--base-font);
-font-size: var(--font-large);
-font-style: normal;
-font-weight: 400;
-line-height: normal;
-margin-bottom: 16px;
+  font-family: var(--base-font);
+  font-size: var(--font-large);
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: var(--spacing-16);
 }
 
 .inputYoda {
-  text-align: center;
-  font-size: var(--font-small);
-  display: flex;
   max-width: 105.467px;
   height: 35.241px;
-   border: 0.5px solid var(--gray);
+  background-repeat: no-repeat;
+  background-position-x: 50%;
+  background-position-y: center;
+  border: 0.5px solid var(--gray);
+  text-align: center;
+  font-size: var(--font-large);
 }
 
 .btn_Yoda1 {
   display: flex;
-  width: 18px;
-  height: 16px;
-  padding: 2px;
+  width: var(--spacing-36);
+  height: var(--spacing-36);
   align-items: center;
+  justify-content: center;
+  font-size: var(--font-large);
+  color: var(--light-font-solid);
   background: #4F4F4F;
   background-repeat: no-repeat;
   background-position-x: 50%;
   background-position-y: center;
-  gap: 5px;
+}
+
+.add_cart{
+  width: 180px;
+  height: var(--spacing-36);
+  border: none;
+  border-radius: 0%;
+  background-color: var(--primary-solid);
+  color: var(--light-bg-solid);
+  outline: none;
 }
 
 .cantItems {
@@ -81,4 +96,18 @@ margin-bottom: 16px;
   gap: 16px;
   height: 37.9px;
   margin-bottom: 29.7px;
+}
+
+.payment_methods {
+display: flex;
+}
+
+.card-item__promo {
+  font-size: var(--font-medium);
+  text-align: center;
+}
+
+.formas {
+  text-decoration: underline;
+  padding-right: 5px;
 }
