--- a/public/css/misc/normalize.css
+++ b/public/css/misc/normalize.css
@@ -5,13 +5,16 @@
     padding: 0;
     box-sizing: border-box;
 }
-input[type=number]::-webkit-inner-spin-button, 
-input[type=number]::-webkit-outer-spin-button { 
-  -webkit-appearance: none; 
-  margin: 0; 
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
 }
 
-input[type=number] { -moz-appearance:textfield; }
+input[type=number] {
+    -moz-appearance: textfield;
+}
 
 html {
     font-family: var(--base-font);
@@ -23,19 +26,20 @@ a {
     text-decoration: none;
     font-family: inherit;
     color: inherit;
-    
+
 }
 
 header,
 footer {
     font-family: var(--alternative-font);
-    font-size: var(--font-medium); 
+    font-size: var(--font-medium);
     color: var(--light-font-solid);
     background-color: var(--dark-bg-solid);
-    padding: var(--spacing-36); 
-    
+    padding: var(--spacing-36);
+
 }
-img{
+
+img {
     width: 100%;
 }
 
@@ -44,7 +48,7 @@ ol {
     list-style: none;
 }
 
-section article p{
+section article p {
     font-size: var(--font-medium);
     padding-top: 5px;
     width: 458px;
