corregido el error

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -1,11 +1,5 @@
 
-    <section class="hero"><!-- inicio banner -->
-        <article class="hero__content container">
-            <h3 class="hero__title">Nuevos Ingresos</h3>
-            <p class="hero__text"> Descubrí el próximo Funko Pop de tu colección</p>
-            <a class="hero__link" href="./pages/shop/shop.html">SHOP</a>
-        </article>
-    </section><!--fin banner-->
+<%- include('./partials/header.ejs') %>
 
     <main class="container main-container"> <!-- inicio cuerpo principal -->
         <section class="collection container"><!-- inicio primera seccion -->
@@ -106,21 +100,4 @@
             </div>
         </section>
     </main><!-- fin cuerpo principal -->
-
-    <footer><!-- inicio footer seccion -->
-        <nav class="container">
-            <img src="./img/branding/isotype.svg" alt="isotipo de la marca funco.com">
-            <ul>
-                <li><a href="./pages/shop/shop.html">SHOP</a></li>
-                <li><a href="./pages/admin/login.html">INGRESAR</a></li>
-                <li><a href="./pages/shop/contact.html">CONTACTO</a></li>
-            </ul>
-        </nav>
-        <p style="font-size: 20px;">All rights reserved 2023 - Funkoshop &copy</p>
-    </footer><!-- fin footer seccion -->
-
-    <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
-    <script src="./js/glide.js"></script>
-</body>
-</html>
+    <%- include('./partials/footer.ejs') %>
