--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title><%= title %></title>
+    <title>Home | funko shop</title>
     <link rel="stylesheet" href="./css/index.css">
     <link rel="icon" href="./img/branding/isotype.svg">
 </head>
