--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -13,5 +13,7 @@
 <script src="https://cdn.jsdelivr.net/npm/iconify-icon@1.0.8/dist/iconify-icon.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@glidejs/glide"></script>
 <script src="./js/glide.js"></script>
+<script src="./js/item.js"></script>
+<script src="./js/index.js"></script>
 </body>
 </html>
