se actualizo las rutas, los funkos y algunos accesos de shop

--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,10 +1,10 @@
 <footer><!-- inicio footer seccion -->
     <nav class="container">
-        <img src="./img/branding/isotype.svg" alt="isotipo de la marca funco.com">
+        <img src="/img/branding/isotype.svg" alt="isotipo de la marca funco.com">
         <ul>
-            <li><a href="./pages/shop/shop.html">SHOP</a></li>
-            <li><a href="./pages/admin/login.html">INGRESAR</a></li>
-            <li><a href="./pages/shop/contact.html">CONTACTO</a></li>
+            <li><a href="/shop">SHOP</a></li>
+            <li><a href="/admin/login">INGRESAR</a></li>
+            <li><a href="/contact">CONTACTO</a></li>
         </ul>
     </nav>
     <p style="font-size: 20px;">All rights reserved 2023 - Funkoshop &copy</p>
