--- a/src/views/auth/register.ejs
+++ b/src/views/auth/register.ejs
@@ -1,30 +1,4 @@
-<!DOCTYPE html>
-<html lang="es">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Funkoshop | Register</title>
-    <link rel="stylesheet" href="../../css/index.css">
-    <link rel="icon" href="../../img/branding/isotype.svg">
-</head>
-
-<body>
-    <header><!-- inicio header -->
-        <nav class="container navbar">
-            <picture class="navbar__logo">
-                <a href="../../index.html"><img src="../../img/branding/logo_light_horizontal.svg" alt="Isologotipo de la marca funkoshop"></a>
-            </picture>
-            <ul class="navbar__menu">
-                <li class="navbar__item with__submenu">
-                    <a class="navbar__link" href="../../pages/shop/shop.html">VER TIENDA</a>
-                </li>
-                <li class="navbar__item"> <a class="navbar__link" href="../admin/admin.html">ADMIN</a></li>
-                <li class="navbar__item"> <a class="navbar__link" href="../../index.html">SALIR</a></li>
-            </ul>
-        </nav>
-    </header><!-- fin header -->
-
+<%- include('../partials/headerAdmin.ejs') %>
     <main class="register-all"><!-- inicio cuerpo principal -->
         <div class="register">
             <span class="register-box">
@@ -91,17 +65,6 @@
         </div>
     </main><!-- fin cuerpo principal -->
 
-    <footer><!-- inicio footer seccion -->
-        <nav class="container">
-            <img src="../../img/branding/isotype.svg" alt="isotipo de la marca funco.com">
-            <ul>
-                <li><a href="../../pages/shop/shop.html">SHOP</a></li>
-                <li><a href="../../pages/admin/register.html">REGISTRARSE</a></li>
-                <li><a href="../../pages/admin/login.html">INGRESAR</a></li>
-                <li><a href="../../pages/shop/contact.html">CONTACTO</a></li>
-            </ul>
-        </nav>
-        <p style="font-size: 20px;">All rights reserved 2023 - Funkoshop &copy</p>
-    </footer><!-- fin footer seccion -->
+    <%- include('../partials/footerAdmin.ejs') %>
 </body>
 </html>
