--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -8,10 +8,10 @@
             <ARTICLE class="collection__content">
                 <h3 class="collection__title">Star Wars & The Mandalorian </h3>
                 <p class="collection__text">Disfruta de una saga que sigue agregando personajes a su colección.</p>
-                <a class="collection__link" href="./pages/shop/shop.html">VER COLECCIÓN</a>
+                <a class="collection__link" href="/shop">VER COLECCIÓN</a>
             </ARTICLE>
             <picture class="collection__cover">
-                <img src="./img/star-wars/baby-yoda-1.webp" alt="Figura coleccionable de funko grogu">
+                <img src="/img/star-wars/baby-yoda-1.webp" alt="Figura coleccionable de funko grogu">
             </picture>
         </section><!-- fin primera seccion -->
 
@@ -19,10 +19,10 @@
             <ARTICLE class="collection__content">
                 <h3 class="collection__title">POKEMON INDIGO</h3>
                 <p class="collection__text">Atrapa todos los que puedas y disfruta de una colección llena de amigos.</p>
-                <a class="collection__link" href="./pages/shop/shop.html">VER COLECCIÓN</a>
+                <a class="collection__link" href="/pages/shop/shop.html">VER COLECCIÓN</a>
             </ARTICLE>
             <picture class="collection__cover">
-                <img src="./img/pokemon/vulpix-1.webp" alt="Figura coleccionable de funko vulpis de la serie pokemon">
+                <img src="/img/pokemon/vulpix-1.webp" alt="Figura coleccionable de funko vulpis de la serie pokemon">
             </picture>
         </section><!-- fin segunda seccion -->
 
@@ -30,10 +30,10 @@
             <ARTICLE class="collection__content">
                 <h3 class="collection__title">HARRY POTTER </h3>
                 <p class="collection__text">Revive los recuerdos de una saga llena de magia y encanto.</p>
-                <a class="collection__link" href="./pages/shop/shop.html">VER COLECCIÓN</a>
+                <a class="collection__link" href="/shop">VER COLECCIÓN</a>
             </ARTICLE>
             <picture class="collection__cover">
-                <img src="./img/harry-potter/snape-patronus-1.webp" alt="Figura coleccionable de funko del patronus de snape de la pelicula Harry poter">
+                <img src="/img/harry-potter/snape-patronus-1.webp" alt="Figura coleccionable de funko del patronus de snape de la pelicula Harry poter">
             </picture>
         </section><!-- fin tercera seccion -->
 
@@ -43,11 +43,11 @@
                 <ul class="slider__items glide__slides">
                     <li class="slider__item glide__slide "><!-- inicio cuarta seccion primer articulo -->
                         <article>
-                            <a class="card-item__link" href="./pages/shop/item.html">
+                            <a class="card-item__link" href="/shop/item">
                                 <picture class="card-item__cover">
                                     <span class="card-item__tag">NUEVO</span>
-                                    <img class="card-item__img--front" src="./img/star-wars/trooper-1.webp" alt="figura coleccionable funko star wars trooper">
-                                    <img class="card-item__img--back" src="./img/star-wars/trooper-box.webp" alt="figura coleccionable funko star wars trooper box">
+                                    <img class="card-item__img--front" src="/img/star-wars/trooper-1.webp" alt="figura coleccionable funko star wars trooper">
+                                    <img class="card-item__img--back" src="/img/star-wars/trooper-box.webp" alt="figura coleccionable funko star wars trooper box">
                                 </picture>
                                 <div class="card-item__content">
                                     <p class="card-item__licence">STAR WARS</p>
@@ -61,11 +61,11 @@
 
                     <li class="slider__item glide__slide"><!-- inicio cuarta seccion segundo articulo -->
                         <article>
-                            <a class="card-item__link" href="./pages/shop/item.html">
+                            <a class="card-item__link" href="/shop/item">
                                 <picture class="card-item__cover">
                                     <span class="card-item__tag">NUEVO</span>
-                                    <img class="card-item__img--front" src="./img/pokemon/pidgeotto-1.webp" alt="figura coleccionable funko pokemon pidgeotto">
-                                    <img class="card-item__img--back" src="./img/pokemon/pidgeotto-box.webp" alt="figura coleccionable funko pokemon pidgeotto box">
+                                    <img class="card-item__img--front" src="/img/pokemon/pidgeotto-1.webp" alt="figura coleccionable funko pokemon pidgeotto">
+                                    <img class="card-item__img--back" src="/img/pokemon/pidgeotto-box.webp" alt="figura coleccionable funko pokemon pidgeotto box">
                                 </picture>
                                 <div class="card-item__content">
                                     <p class="card-item__licence">POKEMON</p>
@@ -79,11 +79,11 @@
 
                     <li class="slider__item glide__slide"><!-- inicio cuarta seccion tercer articulo -->
                         <article >
-                            <a class="card-item__link" href="./pages/shop/item.html">
+                            <a class="card-item__link" href="/shop/item">
                                 <picture class="card-item__cover">
                                     <span class="card-item__tag">NUEVO</span>
-                                    <img class="card-item__img--front" src="./img/harry-potter/luna-1.webp" alt="figura coleccionable funko Harru-potter luna">
-                                    <img class="card-item__img--back" src="./img/harry-potter/luna-box.webp" alt="figura coleccionable funko Harru-potter luna box">
+                                    <img class="card-item__img--front" src="/img/harry-potter/luna-1.webp" alt="figura coleccionable funko Harru-potter luna">
+                                    <img class="card-item__img--back" src="/img/harry-potter/luna-box.webp" alt="figura coleccionable funko Harru-potter luna box">
                                 </picture>
                                 <div class="card-item__content">
                                     <p class="card-item__licence">HARRY POTTER</p>
